# zxcvbn-rs

./: Cargo.toml  README.md
.github/workflows/: zxcvbn.yml
benches/: zxcvbn.rs  zxcvbn_unicode.rs
bindings/python/: .gitignore  Cargo.toml  README.md  pyproject.toml
bindings/python/python/zxcvbn_rs/: __init__.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_zxcvbn_rs.py
src/: lib.rs  scoring.rs
src/matching/: mod.rs
