[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "zxcvbn-rs"
version = "0.1.0"
description = "Python bindings for zxcvbn-rs"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
]

[tool.maturin]
python-source = "python"
module-name = "zxcvbn_rs._zxcvbn_rs"
